--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@n8n/chat": "^0.59.0",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
+    "i18next": "^25.5.3",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-i18next": "^16.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5"
   }
 }
